yup+ emailjs from
Formulaire fonctionnel avec reacthookform , yup et emailjs

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,12 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('oVZRz5qfAOnUdwk5q');
+        })();
+    </script>
+
   </body>
 </html>
