--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
-            emailjs.init('oVZRz5qfAOnUdwk5q');
+            emailjs.init('RsLQJda0wxFIN0KjI');
         })();
     </script>
 
